concord_macros/tests/trybuild/fail/codegen/reserved_nocontent_request_invalid.stderr
error: `NoContent` is only valid as an endpoint response
 --> tests/trybuild/fail/codegen/reserved_nocontent_request_invalid.rs:6:23
  |
6 |     POST Create(body: NoContent)
  |                       ^^^^^^^^^
